--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="atr_s">Atrás</string>
     <string name="finalizar">Finalizar</string>
     <string name="security_answer">Security answer</string>
+    <string name="textview">TextView</string>
 </resources>
